--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ commands:
             chmod +x grabpl
             mv grabpl /tmp
 
-  halt-if-matching-files:
+  halt-if-not-matching-files:
     description: "Requires files of last commit to match provided glob pattern. If no matches are found, the step will halt and be marked as successful."
     parameters:
       regex:
@@ -73,10 +73,14 @@ commands:
       - run:
           name: "Halt if matching changed files"
           command: |
+            echo "Revision: << pipeline.git.revision >>"
+            echo "Base revision: << pipeline.git.base_revision >>"
+            git log --oneline --pretty="format:" --name-only origin/master.. | awk 'NF' | sort -u
+
             if [ << parameters.inverse >> = true ]; then
-              git log --oneline --pretty="format:" --name-only origin/master.. | awk 'NF' | sort -u | grep -q '<< parameters.regex >>' || circleci step halt
+              git log --oneline --pretty="format:" --name-only origin/master.. | awk 'NF' | sort -u | egrep -q '<< parameters.regex >>' && circleci step halt
             else
-              git log --oneline --pretty="format:" --name-only origin/master.. | awk 'NF' | sort -u | grep -q '<< parameters.regex >>' && circleci step halt
+              git log --oneline --pretty="format:" --name-only origin/master.. | awk 'NF' | sort -u | egrep -q '<< parameters.regex >>' || circleci step halt
             fi
 
 jobs:
@@ -97,6 +101,8 @@ jobs:
               circleci step halt
             fi
       - checkout
+      - halt-if-not-matching-files:
+          regex: ^(go.mod|go.sum|.*\.go$
       - run:
           name: CI job started
           command: ./scripts/ci-job-started.sh
@@ -149,6 +155,8 @@ jobs:
               circleci step halt
             fi
       - checkout
+      - halt-if-not-matching-files:
+          regex: ^(e2e/|emails/|packages/|public/|package.json|yarn.lock)+
       - restore_cache:
           keys:
             # Use own cache for front-end builds, since for some reason it can't be unpacked for parts of the
@@ -752,6 +760,8 @@ jobs:
           MYSQL_PASSWORD: password
     steps:
       - checkout
+      - halt-if-not-matching-files:
+          regex: ^(go.mod|go.sum|.*\.go$
       - run:
           name: ci job started
           command: "./scripts/ci-job-started.sh"
@@ -781,6 +791,8 @@ jobs:
           POSTGRES_DB: grafanatest
     steps:
       - checkout
+      - halt-if-not-matching-files:
+          regex: ^(go.mod|go.sum|.*\.go$
       - run:
           name: ci job started
           command: "./scripts/ci-job-started.sh"
@@ -805,6 +817,8 @@ jobs:
       - image: cimg/python:3.8
     steps:
       - checkout
+      - halt-if-not-matching-files:
+          regex: ^docs/.*
       - run:
           name: Install codespell
           command: "pip install codespell"
@@ -825,9 +839,8 @@ jobs:
       GOGC: 20
     steps:
       - checkout
-      - halt-if-matching-files:
+      - halt-if-not-matching-files:
           regex: ^.*\.go$
-          inverse: true
       - run:
           name: Install Go linters
           command: |
@@ -860,6 +873,8 @@ jobs:
     executor: node
     steps:
       - checkout
+      - halt-if-not-matching-files:
+          regex: ^(e2e/|emails/|packages/|public/|package.json|yarn.lock)+
       - run:
           name: CI job started
           command: "./scripts/ci-job-started.sh"
@@ -894,6 +909,8 @@ jobs:
     executor: go
     steps:
       - checkout
+      - halt-if-not-matching-files:
+          regex: ^(go.mod|go.sum|.*\.go$
       - run:
           name: CI job started
           command: "./scripts/ci-job-started.sh"
@@ -913,9 +930,8 @@ jobs:
     executor: base
     steps:
       - checkout
-      - halt-if-matching-files:
+      - halt-if-not-matching-files:
           regex: ^docs/.*
-          inverse: true
       - setup_remote_docker
       - run:
           name: CI job started
@@ -1181,8 +1197,6 @@ workflows:
             - lint-go
       - build-release-publisher:
           filters: *filter-master-or-release
-      - codespell:
-          filters: *filter-all
       - lint-go:
           filters: *filter-all
       - shellcheck:
@@ -1220,7 +1234,6 @@ workflows:
             - build-oss-frontend
             - test-backend
             - test-frontend
-            - codespell
             - shellcheck
             - build-oss-plugins
       - package-enterprise:
@@ -1238,7 +1251,6 @@ workflows:
             - build-enterprise-frontend
             - test-backend
             - test-frontend
-            - codespell
             - shellcheck
             - build-enterprise-plugins
       - build-oss-windows-installer:
@@ -1334,8 +1346,12 @@ workflows:
           filters: *filter-all
           requires:
             - package-oss
+      - codespell:
+          filters: *filter-all
       - build-docs-website:
           filters: *filter-not-release-or-master
+          requires:
+            - codespell
       - deploy-to-kubernetes:
           filters: *filter-only-master
           requires:
