--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,6 +223,8 @@ jobs:
               circleci step halt
             fi
       - checkout
+      - halt-if-not-matching-files:
+          regex: ^plugins-bundled/
       - run:
           name: CI job started
           command: ./scripts/ci-job-started.sh
