--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,6 +288,8 @@ jobs:
     executor: base
     steps:
       - checkout
+      - halt-if-not-matching-files:
+          regex: \.sh$
       - run:
           name: CI job started
           command: ./scripts/ci-job-started.sh
